--- a/CSS/index.css
+++ b/CSS/index.css
@@ -85,18 +85,18 @@ a:visited {
 
 #beyond {
     float: left;
-    font-size: 290%;
-    margin-left: 2vw;
-    margin-top: 2.9vh;
+    font-size: 270%;
+    margin-left: 3vw;
+    margin-top: 3.9vh;
     position: inherit;
     color: white;
 }
 
 #hai {
     float: right;
-    font-size: 210%;
+    font-size: 270%;
     margin-right: 2vw;
-    margin-top: 3.9vh;
+    margin-top: 4.4vh;
     margin-left: -20%;
     position: relative;
     display: flex;
@@ -108,7 +108,7 @@ a:visited {
 
     margin: 0px;
     width: 100%;
-    height: 12vh;
+    height: 11vh;
     font-family: 'Cinzel', serif;
     font-style: italic;
     position: relative;
@@ -130,10 +130,10 @@ a:visited {
     background-color: black;
     border: none;
     cursor: pointer;
-    
+
     position: relative;
-    
-    
+
+
 }
 
 #imga {
@@ -166,32 +166,16 @@ body {
 #one {
 
     width: 100%;
-    background-repeat: no-repeat;
-    object-fit: cover;
-    margin-top: -13vh;
-    position: relative;
 
 }
 
 #intro1 {
     position: relative;
-    
+
 
 }
 
-#chc {
-    margin-left: 55%;
-    margin-top: -10%;
-    text-align: center;
-    font-size: 2vw;
-    color: white;
-    font-weight: bold;
-    position: inherit;
-}
 
-#byb {
-    text-decoration: underline white;
-}
 
 
 
@@ -200,7 +184,7 @@ body {
 /******************** inro 2 *********************************/
 
 #intro2 {
-    padding-top: 6%;
+    margin-top: -12%;
 
 }
 
@@ -283,13 +267,14 @@ footer {
 
 
     }
-    #one{
-        margin-top: -43vh;
+
+    #one {
+        margin-top: -98vh;
     }
-    #hai
-    {
+
+    #hai {
         font-size: 240%;
-        
+
     }
 
 }
@@ -297,6 +282,7 @@ footer {
 
 /************************phone***************************************/
 @media screen and (max-width:630px) {
+
     .dropbtn {
         visibility: visible;
 
@@ -308,24 +294,35 @@ footer {
     #link3,
     #link4 {
         visibility: hidden;
-        padding-bottom: 20px;
-        
-        
+        padding-bottom: 55px;
+        font-style: normal;
 
+
+    }
+
+    #link3 {
+        margin-left: 3vw;
+        padding-bottom: 56px;
+    }
+
+    #link4 {
+        margin-left: 6vw;
     }
 
     #downdr {
-        margin-top: 11vh;
+        margin-top: 22vh;
         position: absolute;
-        margin-left: -47vw;
+        margin-left: -53vw;
         display: block;
-        
+    }
 
+    #one {
+        margin-top: -10vh;
 
 
     }
 
-    #intro1{
-        margin-top: 14vh;
+    #nm {
+        margin-top: 11vh;
     }
 }
