--- a/CSS/index.css
+++ b/CSS/index.css
@@ -108,7 +108,7 @@ a:visited {
 
     margin: 0px;
     width: 100%;
-    height: 11vh;
+    height: 9.5vh;
     font-family: 'Cinzel', serif;
     font-style: italic;
     position: relative;
@@ -156,6 +156,7 @@ body {
     margin: 0px;
     background-color: black;
     background-blend-mode: multiply;
+    overflow: visible;
 
 }
 
@@ -166,7 +167,9 @@ body {
 #one {
 
     width: 100%;
-
+    
+    background-repeat: no-repeat;
+    object-fit: contain;
 }
 
 #intro1 {
@@ -183,13 +186,8 @@ body {
 
 /******************** inro 2 *********************************/
 
-#intro2 {
-    margin-top: -12%;
-
-}
-
 #nm {
-
+    margin-top: -22vh;
     color: white;
     text-align: center;
     font-size: 350%;
@@ -248,7 +246,8 @@ footer {
 
 
 /********************not a phone**************************/
-@media screen and (min-width:630px) {
+
+@media screen and (min-width:675px) {
     .dropbtn {
         visibility: hidden;
 
@@ -277,11 +276,12 @@ footer {
 
     }
 
+
 }
 
 
 /************************phone***************************************/
-@media screen and (max-width:630px) {
+@media screen and (max-width:675px) {
 
     .dropbtn {
         visibility: visible;
@@ -323,6 +323,6 @@ footer {
     }
 
     #nm {
-        margin-top: 11vh;
+        margin-top: 22vw;
     }
 }
