--- a/CSS/blog.css
+++ b/CSS/blog.css
@@ -163,7 +163,7 @@ body {
 }
 
 
-/*************************** copywright ******************************/
+/*************************** footer ******************************/
 
 #footer {
     text-align: center;
