--- a/CSS/about.css
+++ b/CSS/about.css
@@ -155,7 +155,7 @@ a:visited {
 
 body {
     margin: 0px;
-    background-image: linear-gradient(-225deg, #77FFD2 0%, #6297DB 48%, #1EECFF 100%);
+    background-color: black;
     background-blend-mode: multiply;
     overflow: visible;
     position: relative;
@@ -224,6 +224,9 @@ body {
         font-size: 240%;
 
     }
+    #parag{
+        font-size: 140%;
+    }
 
 
 }
@@ -263,13 +266,13 @@ body {
         display: block;
     }
 
-    #nm {
+    #am {
         font-size: 240%;
         margin-top: 3vw;
     }
 
-    #ipara {
-        font-size: 120%;
+    #parag {
+        font-size: 118%;
     }
 
     .header {
@@ -281,12 +284,9 @@ body {
 }
 
 @media screen and (max-width:950px) {
-    #one {
-        margin-top: 4.5vw;
-        height: fit-content;
-    }
+    
 
-    #intro2 {
+    #about{
         margin-top: 1vw;
     }
 }
@@ -303,7 +303,7 @@ body {
 
 .slider {
 
-    max-width: 50.1%;
+    max-width: 39.1%;
     margin: auto;
     position: relative;
     
@@ -318,7 +318,7 @@ body {
 .slides {
     display: flex;
     width: max-content;
-    height: 31.06vw;
+    height: 21.06vw;
     image-resolution: inherit;
     position: relative;
 
@@ -340,4 +340,34 @@ body {
         overflow: hidden;
     }
 
+}
+
+
+
+/*********************************** about *****************/
+
+#am{
+    color: white;
+    text-align: center;
+    font-size: 420%;    
+    font-family: 'Dancing Script', cursive;
+}
+#parag{
+    color: white;
+    text-align: center;
+    font-family: 'Playfair Display SC', serif;
+    line-height: 130%;
+    letter-spacing: 1.5;
+    justify-content: center;
+
+}
+
+#am,#parag{
+    padding-left: 5%;
+    padding-right: 5%;
+}
+
+#horli{
+    width: 100% ;
+    
 }
