--- a/CSS/index.css
+++ b/CSS/index.css
@@ -393,11 +393,11 @@ body {
 .triangle-up {
     width: 0;
     height: 0;
-    border-left: 20px solid transparent;
-    border-right: 20px solid transparent;
-    border-bottom: 40px solid rgba(255, 255, 255, 1);
-    margin-left: 8.7%;
-    margin-top: -6.5vw;
+    border-left: 1.2vw solid transparent;
+    border-right: 1.2vw solid transparent;
+    border-bottom: 2.4vw solid rgba(255, 255, 255, 1);
+    margin-left: 8.57%;
+    margin-top: -6.64vw;
     position: fixed;
     visibility: hidden;
 
