--- a/CSS/about.css
+++ b/CSS/about.css
@@ -309,3 +309,201 @@ body {
 #horli {
     width: 100%;
 }
+
+/**************************************/
+
+#contactbutton {
+    background-color: rgba(255, 255, 255, 1);
+    margin-left: 8vw;
+    margin-right: 80vw;
+    margin-top: 1vw;
+    position: fixed;
+    font-size: 2.5vw;
+    padding: 0.4vw;
+    border-radius: 20px;
+    font-family: 'Jacques Francois Shadow', serif;
+    font-weight: bolder;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.cicon {
+    margin-bottom: 1vw;
+    cursor: pointer;
+}
+
+.email {
+    margin-bottom: -0.3vw;
+}
+
+#maillink {
+    color: black;
+    margin-left: 3.7vw;
+    margin-top: 22vw;
+    position: fixed;
+    font-size: 1vw;
+    font-family: 'Ruluko', sans-serif;
+    background-color: #9400d3;
+    border-radius: 20px;
+    padding: 0.6%;
+    cursor: pointer;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 0.6s ease;
+    font-weight: bolder;
+
+}
+
+.triangle-up {
+    width: 0;
+    height: 0;
+    border-left: 0.6vw solid transparent;
+    border-right: 0.6vw solid transparent;
+    border-bottom: 1.2vw solid #9400d3;
+    margin-left: 9.1vw;
+    margin-top: 21.1vw;
+    position: fixed;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 1.1s ease;
+
+}
+
+#email1 {
+    display: flex;
+    flex-direction: column;
+}
+
+#email2 {
+    color: wheat;
+}
+
+.clipboard {
+    margin-left: 16.99vw;
+    position: fixed;
+    margin-top: 22.46vw;
+    background-color: rgba(80, 77, 77, 1);
+    padding: 0.3vw;
+    border-radius: 10px;
+    visibility: hidden;
+}
+
+.copiedtoc {
+    margin-left: 16.99vw;
+    position: fixed;
+    margin-top: 22.46vw;
+    background-color: rgba(80, 77, 77, 1);
+    padding: 0.3vw;
+    border-radius: 10px;
+    visibility: hidden;
+}
+
+.triangle-left {
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-right: 20px solid rgba(80, 77, 77, 1);
+    margin-left: 16.04vw;
+    margin-top: 22.7vw;
+    position: fixed;
+    visibility: hidden;
+}
+
+/* contact bar info */
+.about-name {
+    color: white;
+    margin-top: 0;
+    font-family: 'Ruluko', sans-serif;
+}
+
+.triangle-left-about {
+    width: 0;
+    height: 0;
+    border-top: 1vw solid transparent;
+    border-bottom: 1vw solid transparent;
+    border-right: 2vw solid #9400d3;
+}
+
+/* .github-about,
+.linkedin-about,
+.medium-about,
+.twitter-about,
+.email-about {} */
+
+.github-about {
+    position: fixed;
+    margin-left: 11.28vw;
+    margin-top: 2vw;
+}
+
+.linkedin-about {
+    position: fixed;
+    margin-left: 11.28vw;
+    margin-top: 6.3vw;
+}
+
+.medium-about {
+    position: fixed;
+    margin-left: 11.28vw;
+    margin-top: 10.6vw;
+}
+
+.twitter-about {
+    position: fixed;
+    margin-left: 11.28vw;
+    margin-top: 14.5vw;
+
+}
+
+.email-about {
+    position: fixed;
+    margin-left: 11.28vw;
+    margin-top: 18.4vw;
+}
+
+.itsgithub,
+.itslinkedin,
+.itsmedium,
+.itstwitter,
+.itsemail {
+    background-color: #9400d3;
+    font-size: 1.4vw;
+    padding: 0.3vw;
+    border-radius: 13px;
+}
+
+.itsgithub {
+    position: fixed;
+    margin-left: 12.48vw;
+    margin-top: 1.88vw;
+}
+
+.itslinkedin {
+    position: fixed;
+    margin-left: 12.48vw;
+    margin-top: 6.17vw;
+}
+
+.itsmedium {
+    position: fixed;
+    margin-left: 12.48vw;
+    margin-top: 10.46vw;
+}
+
+.itstwitter {
+    position: fixed;
+    margin-left: 12.48vw;
+    margin-top: 14.33vw;
+}
+
+.itsemail {
+    position: fixed;
+    margin-left: 12.48vw;
+    margin-top: 18.33vw;
+}
+
+#infoaboutbutts {
+    visibility: hidden;
+}
