--- a/CSS/index.css
+++ b/CSS/index.css
@@ -387,7 +387,9 @@ body {
     padding: 1%;
     cursor: pointer;
     visibility: hidden;
- 
+    opacity: 0;
+    transition: opacity 0.6s ease;
+
 }
 
 .triangle-up {
@@ -400,6 +402,8 @@ body {
     margin-top: -6.64vw;
     position: fixed;
     visibility: hidden;
+    opacity: 0;
+    transition: opacity 1.1s ease;
 
 }
 
@@ -441,5 +445,97 @@ body {
     margin-left: 18.67vw;
     margin-top: -3.4vw;
     position: fixed;
+    visibility: hidden;
+}
+
+/* contact bar info */
+.about-name {
+    color: white;
+    margin-left: 12.6vw;
+    margin-top: 0;
+    font-family: 'Ruluko', sans-serif;
+}
+
+.triangle-left-about {
+    width: 0;
+    height: 0;
+    border-top: 1vw solid transparent;
+    border-bottom: 1vw solid transparent;
+    border-right: 2vw solid rgb(0, 0, 0);
+}
+
+/* .github-about,
+.linkedin-about,
+.medium-about,
+.twitter-about,
+.email-about {} */
+
+.github-about {
+    position: fixed;
+    margin-top: -24.9vw;
+    margin-left: 11.3vw;
+}
+
+.linkedin-about {
+    position: fixed;
+    margin-top: -20.6vw;
+    margin-left: 11.3vw;
+}
+
+.medium-about {
+    position: fixed;
+    margin-top: -16.4vw;
+    margin-left: 11.3vw;
+}
+
+.twitter-about {
+    position: fixed;
+    margin-top: -12.4vw;
+    margin-left: 11.3vw;
+}
+
+.email-about {
+    position: fixed;
+    margin-top: -8.5vw;
+    margin-left: 11.3vw;
+}
+
+.itsgithub,
+.itslinkedin,
+.itsmedium,
+.itstwitter,
+.itsemail {
+    background-color: black;
+    font-size: 1.4vw;
+    padding: 0.3vw;
+    border-radius: 13px;
+}
+
+.itsgithub {
+    margin-top: -25.03vw;
+    position: fixed;
+
+}
+
+.itslinkedin {
+    position: fixed;
+    margin-top: -20.7vw;
+}
+
+.itsmedium {
+    position: fixed;
+    margin-top: -16.46vw;
+}
+
+.itstwitter {
+    position: fixed;
+    margin-top: -12.54vw;
+}
+
+.itsemail {
+    position: fixed;
+    margin-top: -8.6vw;
+}
+#infoaboutbutts{
     visibility: hidden;
 }
