--- a/CSS/about.css
+++ b/CSS/about.css
@@ -109,6 +109,7 @@ a:visited {
     font-style: italic;
     position: relative;
     background-color: inherit;
+    margin-bottom: 1vw;
 }
 
 .dropbtn {
@@ -310,6 +311,27 @@ body {
     width: 100%;
 }
 
+#horli2{
+    visibility: hidden;
+    overflow: visible; /* For IE */
+    padding: 0;
+    border: none;
+    border-top: medium double white;
+    color: white;
+    text-align: center;
+}
+
+#horli2:after {
+    content: "§";
+    display: inline-block;
+    position: relative;
+    top: -0.7em;
+    font-size: 1.5em;
+    padding: 0 0.25em;
+    background: black;
+    color: white;
+}
+
 /**************************************/
 
 #contactbutton {
@@ -318,7 +340,7 @@ body {
     margin-right: 80vw;
     margin-top: 1vw;
     position: fixed;
-    font-size: 2.5vw;
+    width: 3.15vw;
     padding: 0.4vw;
     border-radius: 20px;
     font-family: 'Jacques Francois Shadow', serif;
@@ -329,7 +351,7 @@ body {
 }
 
 .cicon {
-    margin-bottom: 1vw;
+    margin-bottom: 1.8vw;
     cursor: pointer;
 }
 
@@ -338,9 +360,9 @@ body {
 }
 
 #maillink {
-    color: black;
+    color: white;
     margin-left: 3.7vw;
-    margin-top: 22vw;
+    margin-top: 21.4vw;
     position: fixed;
     font-size: 1vw;
     font-family: 'Ruluko', sans-serif;
@@ -361,8 +383,8 @@ body {
     border-left: 0.6vw solid transparent;
     border-right: 0.6vw solid transparent;
     border-bottom: 1.2vw solid #9400d3;
-    margin-left: 9.1vw;
-    margin-top: 21.1vw;
+    margin-left: 9.05vw;
+    margin-top: 20.4vw;
     position: fixed;
     visibility: hidden;
     opacity: 0;
@@ -382,7 +404,7 @@ body {
 .clipboard {
     margin-left: 16.99vw;
     position: fixed;
-    margin-top: 22.46vw;
+    margin-top: 22.0vw;
     background-color: rgba(80, 77, 77, 1);
     padding: 0.3vw;
     border-radius: 10px;
@@ -392,7 +414,7 @@ body {
 .copiedtoc {
     margin-left: 16.99vw;
     position: fixed;
-    margin-top: 22.46vw;
+    margin-top: 22.0vw;
     background-color: rgba(80, 77, 77, 1);
     padding: 0.3vw;
     border-radius: 10px;
@@ -406,7 +428,7 @@ body {
     border-bottom: 10px solid transparent;
     border-right: 20px solid rgba(80, 77, 77, 1);
     margin-left: 16.04vw;
-    margin-top: 22.7vw;
+    margin-top: 22.2vw;
     position: fixed;
     visibility: hidden;
 }
@@ -434,33 +456,33 @@ body {
 
 .github-about {
     position: fixed;
-    margin-left: 11.28vw;
-    margin-top: 2vw;
+    margin-left: 11.17vw;
+    margin-top: 1.8vw;
 }
 
 .linkedin-about {
     position: fixed;
-    margin-left: 11.28vw;
-    margin-top: 6.3vw;
+    margin-left: 11.17vw;
+    margin-top: 5.8vw;
 }
 
 .medium-about {
     position: fixed;
-    margin-left: 11.28vw;
-    margin-top: 10.6vw;
+    margin-left: 11.17vw;
+    margin-top: 9.9vw;
 }
 
 .twitter-about {
     position: fixed;
-    margin-left: 11.28vw;
-    margin-top: 14.5vw;
+    margin-left: 11.27vw;
+    margin-top: 14.1vw;
 
 }
 
 .email-about {
     position: fixed;
-    margin-left: 11.28vw;
-    margin-top: 18.4vw;
+    margin-left: 11.17vw;
+    margin-top: 18.19vw;
 }
 
 .itsgithub,
@@ -477,31 +499,31 @@ body {
 .itsgithub {
     position: fixed;
     margin-left: 12.48vw;
-    margin-top: 1.88vw;
+    margin-top: 1.68vw;
 }
 
 .itslinkedin {
     position: fixed;
     margin-left: 12.48vw;
-    margin-top: 6.17vw;
+    margin-top: 5.7vw;
 }
 
 .itsmedium {
     position: fixed;
     margin-left: 12.48vw;
-    margin-top: 10.46vw;
+    margin-top: 9.86vw;
 }
 
 .itstwitter {
     position: fixed;
     margin-left: 12.48vw;
-    margin-top: 14.33vw;
+    margin-top: 13.99vw;
 }
 
 .itsemail {
     position: fixed;
     margin-left: 12.48vw;
-    margin-top: 18.33vw;
+    margin-top: 18.1vw;
 }
 
 #infoaboutbutts {
