--- a/CSS/about.css
+++ b/CSS/about.css
@@ -133,7 +133,13 @@ a:visited {
 
 body {
     margin: 0px;
-    background-color: black;
+    background: #000000;
+    /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #434343, #000000);
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #434343, #000000);
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     background-blend-mode: multiply;
     overflow: visible;
     position: relative;
@@ -311,9 +317,10 @@ body {
     width: 100%;
 }
 
-#horli2{
+#horli2 {
     visibility: hidden;
-    overflow: visible; /* For IE */
+    overflow: visible;
+    /* For IE */
     padding: 0;
     border: none;
     border-top: medium double white;
@@ -332,9 +339,11 @@ body {
     color: white;
 }
 
-#about-github-link{
+#about-github-link {
     text-decoration: underline;
 }
+
+
 
 /**************************************/
 
