--- a/projects/pairgame/index.css
+++ b/projects/pairgame/index.css
@@ -1,9 +1,9 @@
 body {
-    background-image: linear-gradient(45deg, #874da2 0%, #c43a30 100%);
+    background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
 }
 
 #begintext {
-    color: white;
+    color: black;
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
@@ -98,7 +98,7 @@ body {
 }
 
 #about {
-    color: white;
+    color: black;
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
@@ -109,7 +109,7 @@ body {
 }
 
 #imagesgame {
-    color: white;
+    color: black;
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
