--- a/projects/pairgame/index.css
+++ b/projects/pairgame/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+    background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);
 }
 
 #begintext {
@@ -131,6 +131,26 @@ body {
     display: flex;
 }
 
+.breakers{
+    color: black;
+    font-family: "Quicksand", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+    justify-content: center;
+    text-align: center;
+    font-size: 40px;
+    font-weight: bolder;
+    display: flex;    
+}
+
+.redones{    
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+    color: red;
+}
+
+
 #imagesgame {
     color: black;
     font-family: "Quicksand", sans-serif;
@@ -143,7 +163,8 @@ body {
 }
 
 #level1,#level2{
-    width: 20%;
+    width: 400px;
+    border: 2px solid black;
 }
 
 #imagediv{
