--- a/projects/pairgame/index.css
+++ b/projects/pairgame/index.css
@@ -1,5 +1,5 @@
 body {
-    background-image: linear-gradient(-225deg, #FFE29F 0%, #FFA99F 48%, #FF719A 100%);
+    background-image: linear-gradient(to top, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
 }
 
 #begintext {
@@ -81,16 +81,16 @@ body {
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     font-family: "Quicksand", sans-serif;
     font-optical-sizing: auto;
-    font-style: normal;
+    font-style: normal;    
 
 }
 
 #name {
     display: flex;
-    font-size: 40px;
+    font-size: 25px;
 }
 #by{
-    font-size: 40px;
+    font-size: 25px;
 }
 
 #download:active {
@@ -184,6 +184,7 @@ body {
     display: flex;
     justify-content: center;
     margin: 0;
+    text-align: center;
 }
 
 @media screen and (max-width:854px) {
