--- a/V2/css/index.css
+++ b/V2/css/index.css
@@ -1,6 +1,8 @@
 body {
     background-color: rgb(243, 240, 236);
     overflow-x: hidden;
+    margin: 0;
+    padding: 0;
 }
 
 #header1 {
@@ -11,8 +13,8 @@ body {
 }
 
 #name {
-    font-family: "Charm", serif;
-    font-weight: 400;
+    font-family: "Playwrite HR", serif;
+    font-optical-sizing: auto;
     font-style: normal;
     font-size: 3vw;
 }
@@ -41,49 +43,57 @@ a {
 }
 
 .link a {
-    text-decoration: none; /* Remove default underline */
+    text-decoration: none;
+    /* Remove default underline */
     position: relative;
-    color: inherit; /* Use inherited color */
+    color: inherit;
+    /* Use inherited color */
 }
 
 .link a::after {
     content: "";
     position: absolute;
     left: 0;
-    bottom: -5px; /* Adjust position for underline */
-    width: 100%; /* Full width underline */
-    height: 2px; /* Thickness of the underline */
-    background-color: currentColor; /* Match text color */
-    opacity: 0; /* Initially invisible */
-    transition: opacity 0.2s ease; /* Smooth fade-in effect */
+    bottom: -5px;
+    width: 100%;
+    height: 2px;
+    background-color: currentColor;
+    opacity: 0;
+    transition: opacity 0.2s ease;
 }
 
 .link a:hover::after {
-    opacity: 1; /* Fade in on hover */
+    opacity: 1;
 }
 
-#ntmy{
- justify-content: center;   
- display:flex;
-text-align: center;
+#ntmy {
+    justify-content: center;
+    display: flex;
+    text-align: center;    
 }
 
-.tear{
+.tear {
     height: 20%;
-    width: 100%;    
+    width: 100%;
 }
 
-#ntp1{
-    font-family: "Charm", serif;
-    font-weight: bold;
+#ntp1 {
+    font-family: "Playwrite HR", serif;
+    font-optical-sizing: auto;    
     font-style: normal;
     font-size: 2.5vw;
 }
 
-#ntp2{
+#ntp2 {
     font-family: "Nova Mono", serif;
     font-weight: normal;
     font-style: normal;
     font-size: 1.4vw;
     line-height: 45px;
+    letter-spacing: -1.5px;
+}
+
+#pvhome {
+    width: 100%;
+
 }
