--- a/css/get-in-touch.css
+++ b/css/get-in-touch.css
@@ -76,9 +76,9 @@
 }
 
 .social-username {
-    font-weight: 300; /* Bolder font weight */
+    font-weight: 400; /* Bolder font weight */
     font-size: 20px; /* Larger font size */
-    color: #4a3a2a; /* Darker color for more focus */
+    color: #000000; /* Darker color for more focus */
     margin-top: 4px; /* Slight spacing from the name */
 }
 
