--- a/css/get-in-touch.css
+++ b/css/get-in-touch.css
@@ -1,5 +1,5 @@
 .get-in-touch {
-    grid-column: 3 / 3;
+    grid-column: 4 / 5; /* Move to fourth column */
     grid-row: 1 / 3;
     background: linear-gradient(145deg, #E8D9CD, #f0e6dd);
     border: 2px solid #e0d0be;
