--- a/css/latest-post.css
+++ b/css/latest-post.css
@@ -1,6 +1,6 @@
 /* latest-post.css */
 .latest-post {
-    grid-column: 2 / 3;
+    grid-column: 2 / 4; /* Span middle two columns */
     grid-row: 2 / 3;
     display: flex;
     flex-direction: column;
