--- a/css/projects-showcase.css
+++ b/css/projects-showcase.css
@@ -1,6 +1,6 @@
 /* projects-showcase.css */
 .projects-showcase {
-    grid-column: 1 / 3;
+    grid-column: 3 / 5; /* Span first two columns */
     grid-row: 3 / 5;
 }
 
