--- a/css/twitter-feed.css
+++ b/css/twitter-feed.css
@@ -1,7 +1,7 @@
 /* twitter-feed.css */
 .twitter-feed {
-    grid-column: 3 / 4;
-    grid-row: 3 / 5;
+    grid-column: 1 / 5; /* Span all columns */
+    grid-row: 5 / 6;
     padding: 15px;
     display: flex;
     flex-direction: column;
