--- a/css/welcome-card.css
+++ b/css/welcome-card.css
@@ -1,6 +1,6 @@
 /* welcome-section.css */
 .welcome-section {
-    grid-column: 2 / 3;
+    grid-column: 2 / 4; /* Span middle two columns to maintain proportional width */
     grid-row: 1 / 2;
     display: flex;
     flex-direction: column;
@@ -9,7 +9,7 @@
 }
 
 .welcome-text {
-    font-size: 24px;
+    font-size: 22px;
     line-height: 1.6;
     color: #3b342d;
     margin-bottom: 20px;
