--- a/css/styles.css
+++ b/css/styles.css
@@ -24,8 +24,8 @@ header {
     font-weight: 400;
     font-style: normal;
     font-optical-sizing: auto;
-    font-size: 42px;
-    margin-top: 25px;
+    font-size: 58px;
+    margin-top: 15px;
     margin-left: 95px;
     display: block;
     color: #3b342d;
@@ -39,7 +39,7 @@ header {
     display: flex;
     margin-top: 27px;
     font-optical-sizing: auto;
-    font-size: 21px; /* Changed from vw to px */
+    font-size: 27px; /* Changed from vw to px */
     font-style: normal;
     font-weight: 400;
     background-color: #E8D9CD;
@@ -51,6 +51,7 @@ header {
     padding: 10px 40px;
     cursor: pointer;
     transition: background-color 0.3s, border-radius 0.3s;
+    border-radius: 60px;
 }
 
 .link:hover {
